# file-icon-utility

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
samples/: generate_samples.sh  sometext.txt
src/executable/: CMakeLists.txt  Makefile  main.cpp
src/gui/: CMakeLists.txt  gui.cpp  imagepanel.cpp  imgedit.cpp
src/include/: MacInterface.h  gui.hpp  objcWrapper.hpp
src/objc_lib/: CMakeLists.txt  MacInterface.mm  objcWrapper.mm
