cmake_minimum_required(VERSION 3.13)
project(ricing_tool LANGUAGES C CXX)
find_package(wxWidgets REQUIRED COMPONENTS net core base)
include(${wxWidgets_USE_FILE})
enable_language(OBJCXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED On)
set(CMAKE_CXX_EXTENSIONS Off)
add_subdirectory(src/executable)
add_subdirectory(src/objc_lib)
add_subdirectory(src/gui)